<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="7"
        android:layout_height="wrap_content"
        android:background="@drawable/window_back"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/hint_window_title"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/hint_set_button_1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_set_button_2"/>
            <EditText
                android:id="@+id/hint_set_button_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="1dp"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_set_button_3"/>
            <EditText
                android:id="@+id/hint_set_button_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/hint_hide_linear"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <View
                    android:layout_width="1dp"
                    android:layout_height="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/set_send_module"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/click_send"/>
                    <com.hc.mixthebluetooth.customView.CheckBoxSample
                        android:id="@+id/hint_hide_click"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:color_background="@color/green"
                        app:color_border="@color/green"
                        app:size="18dp"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="1dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/long_click_send"/>
                    <com.hc.mixthebluetooth.customView.CheckBoxSample
                        android:id="@+id/hint_hide_long_click"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:color_background="@color/green"
                        app:color_border="@color/green"
                        app:size="18dp"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/hint_hide_time_linear"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_hint"/>
                    <EditText
                        android:id="@+id/hint_hide_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/baseLine"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/hint_set_button_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="12dp"
                android:background="@drawable/cancel_back_off"
                android:textColor="@color/red"
                android:text="@string/cancel"
                android:textSize="16sp"
                android:layout_weight="1"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/baseLine"/>
            <TextView
                android:id="@+id/hint_set_button_affirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:gravity="center"
                android:background="@drawable/affirm_back_off"
                android:text="@string/affirm"
                android:textSize="16sp"
                android:textColor="@color/green"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
