<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="7"
        android:layout_height="wrap_content"
        android:background="@drawable/window_back"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/hint_window_title"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/hint_invalid_1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_invalid_2"/>
            <TextView
                android:id="@+id/hint_invalid_hid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingTop="8dp"
                android:paddingBottom="5dp"
                android:textColor="@color/skyBlue"
                android:text="@string/hint_invalid_3"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/hint_invalid_hint"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_invalid_4"/>
                <com.hc.mixthebluetooth.customView.CheckBoxSample
                    android:id="@+id/hint_invalid_hint_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:color_background="@color/skyBlue"
                    app:color_border="@color/skyBlue"
                    app:size="16dp"/>
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/baseLine"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/hint_invalid_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="12dp"
                android:background="@drawable/cancel_back_off"
                android:textColor="@color/red"
                android:text="@string/cancel"
                android:textSize="16sp"
                android:layout_weight="1"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/baseLine"/>
            <TextView
                android:id="@+id/hint_invalid_affirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:gravity="center"
                android:background="@drawable/affirm_back_off"
                android:text="@string/affirm"
                android:textSize="16sp"
                android:textColor="@color/green"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>
