<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/orange"/>
                <TextView
                    android:paddingLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/fragment_message_read"/>
                <TextView
                    android:id="@+id/size_read_message_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_message_byte"/>
                <LinearLayout
                    android:id="@+id/read_hint_message_fragment"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp">
                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/circle2"/>
                    <TextView
                        android:id="@+id/read_velocity_message_fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/pop_window_fragment_5"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/green"/>
                <TextView
                    android:paddingLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/send"/>
                <TextView
                    android:id="@+id/size_send_message_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_message_byte"/>
                <LinearLayout
                    android:id="@+id/unsent_hint_message_fragment"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dustyBlue"
                        android:text="@string/fragment_message_byte_number_1"/>
                    <TextView
                        android:id="@+id/size_unsent_message_fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dustyBlue"
                        android:paddingRight="2dp"
                        android:paddingLeft="2dp"
                        android:text="@string/zero"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dustyBlue"
                        android:text="@string/fragment_message_byte_number_2"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:id="@+id/pull_message_fragment"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/pull_down"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/baseLine"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_message_fragment"
        android:layout_width="match_parent"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:background="@color/recyclerBack"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/baseLine"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:gravity="center_vertical"
        android:paddingBottom="8dp"
        android:paddingTop="5dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fold_switch_message_fragment"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/app_name"
                android:src="@drawable/pull_down" />

            <EditText
                android:id="@+id/edit_message_fragment"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:maxLines="5"
                android:background="@drawable/sendbottom"
                android:hint="@string/any_character"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/send_message_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_back"
                android:text="@string/send" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/fold_layout_message_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <com.hc.mixthebluetooth.customView.CheckBoxSample
                android:id="@+id/loop_check_message_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:color_background="@color/green"
                app:color_border="@color/green"
                app:size="20dp" />

            <TextView
                android:id="@+id/loop_text_message_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/loop_send"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/loop_time_message_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:hint="@string/loop_time" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <TextView
                    android:id="@+id/clear_message_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_back"
                    android:padding="10dp"
                    android:text="@string/clear" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
