<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/hid_name"
    tools:context=".activity.HIDActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:scrollbars="none"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:textSize="16sp"
                android:text="@string/activity_hid_one"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/hid_module_front"
                android:rotation="90"
                android:contentDescription="@string/activity_hid_one" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:textSize="16sp"
                android:text="@string/activity_hid_two"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/hid_disk"
                android:contentDescription="@string/activity_hid_two" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:paddingBottom="15dp"
                android:textSize="16sp"
                android:text="@string/activity_hid_three"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/hid_webpage"
                android:contentDescription="@string/activity_hid_three" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:paddingBottom="15dp"
                android:textSize="16sp"
                android:text="@string/activity_hid_four"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/hid_download_webpage"
                android:contentDescription="@string/activity_hid_four" />
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>