<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="7"
        android:layout_height="wrap_content"
        android:background="@drawable/window_back"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/hint_window_title"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/permission_tile"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="21dp"
            android:paddingBottom="21dp"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/hint_permission_text_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/permission_hint"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/baseLine"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/hint_permission_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="12dp"
                android:background="@drawable/cancel_back_off"
                android:textColor="@color/red"
                android:text="@string/permission_cancle"
                android:textSize="16sp"
                android:layout_weight="1"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/baseLine"/>
            <TextView
                android:id="@+id/hint_permission_affirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:gravity="center"
                android:background="@drawable/affirm_back_off"
                android:text="@string/permission_affirm"
                android:textSize="16sp"
                android:textColor="@color/green"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>
